tests/semantic_cases/invalid/if_undefined_condition.ob0
MODULE Main;
BEGIN
  IF unknown THEN
    WriteInt(1)
  END
END Main.
